fixes to some hamburger menu spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -23,6 +23,7 @@ body {
 
 .btn {
     font-weight: 300;
+    font-size: 1rem;
     border-width: 1px;
 }
 
@@ -32,7 +33,7 @@ body {
 }
 
 .nav-item:hover {
-    background-color: rgba(255, 200, 158, 0.9);
+    background-color: #ffdbc2da;
 }
 
 /* .point-down:after {
